--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
   },
