--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
+    "i18next": "^25.6.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.1.0",
     "reactflow": "^11.11.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
