--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,8 @@ aiosqlite==0.19.0
 psycopg2-binary==2.9.9
 pymysql==1.1.0
 cryptography==41.0.7
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.3
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
 
