--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,12 +3,14 @@ uvicorn[standard]>=0.30.0
 sqlalchemy==2.0.23
 pydantic==2.5.0
 python-dotenv==1.0.0
+
+# Databases
 aiosqlite==0.19.0
 psycopg2-binary==2.9.9
 pymysql==1.1.0
-cryptography==41.0.7
+
+# Auth
+python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.1.3
-python-jose[cryptography]==3.3.0
-python-multipart==0.0.6
-
+python-multipart==0.0.7
